# costa

./: .gitignore  .readthedocs.yaml  README.md  setup.cfg
costa/: defaults.py  permap.py
docs/: api.rst  conf.py  docutils.conf  index.rst  requirements.txt
docs/permap/: extend.rst  load.rst  modify.rst  write.rst
fillomino/: __init__.py  buildpermap.py  defaults.py  permapfiller.py
fillomino/resources/: manufacturer-data-cooling.txt  manufacturer-data-heating.txt
tests/: build_test_data.py  conftest.py  test_buildpermap.py  test_defaults.py  test_permap.py  test_permapfiller.py
tests/data/: extended-range-table-cooling.pkl  extended-range-table-heating.pkl  filled-table-cooling.pkl  filled-table-heating.pkl  manufacturer-table-cooling.pkl  manufacturer-table-heating.pkl  restricted-range-table-cooling.pkl  restricted-range-table-heating.pkl
