[metadata]
name = costa
version = 0.0.1
author = Gregor Strugala
author_email = gregor.strugala@polymtl.ca
description = Impute missing values in a performance table
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gstrugala/costa
project_urls =
    Bug Tracker = https://github.com/gstrugala/costa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = costa
